force-app/main/default/objects/Test_Product_Log__c/Test_Product_Log__c.object-meta.xml
<CustomObject>
    <description>Object created by Automation Setting Unlocked Package.</description>
    <label>Product Log</label>
    <nameField>
        <displayFormat>PL-{0000}</displayFormat>
        <label>Product#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>