force-app/main/default/objects/Test_Product_Log__c/fields/Models__c.field-meta.xml
<CustomField>
    <fullName>Models__c</fullName>
    <inlineHelpText>Compatible Models</inlineHelpText>
    <label>Models</label>
    <length>255</length>
    <type>Text</type>
</CustomField>