force-app/main/default/objects/Test_Product_Log__c/fields/Years__c.field-meta.xml
<CustomField>
    <fullName>Years__c</fullName>
    <description>Compatible Years</description>
    <label>Years</label>
    <length>255</length>
    <type>Text</type>
</CustomField>